--- a/gl_load_obj/src/main/AndroidManifest.xml
+++ b/gl_load_obj/src/main/AndroidManifest.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.bn.Sample9_4"
+    package="com.xiaxl.gl_load_obj"
     android:versionCode="1"
     android:versionName="1.0">
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
 
     <application
         android:icon="@drawable/icon"
