--- a/gl_load_obj/src/main/AndroidManifest.xml
+++ b/gl_load_obj/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:label="@string/app_name">
         <activity
             android:name="com.xiaxl.gl_load_obj.MainActivity"
+            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,5 +20,5 @@
             </intent-filter>
         </activity>
     </application>
-    <uses-sdk android:targetSdkVersion="8"></uses-sdk>
+    <uses-sdk android:targetSdkVersion="11"></uses-sdk>
 </manifest> 
